Release Notes

* current
  * added hint for JEDI_Events
  * using executemany to insert event ranges
  * fixed retryJob for ES merge
  * added WORLD
  * removed rse from registerNewDataset for _sub
  * fixed ppEvent not to generate merge jobs when there are failed events in another process
  * setting rule lifetime to hc_test,install,gangarbt
  * changed SA not to pin replicas at LOCALGROUP etc
  * setting activity for registerDatasetLocation
  * refreshing fairshre table every 15min
  * using group account for group.* with destSE
  * using "User Subscriptions" for user's rules
  * changed the limit to reassign jobs at inactive sites to prio=800
  * sending tobekilled to updateJob for already killed jobs
  * fixed bulk getJob for user jobs
  * changed ppEvt to keep failed event records for ES
  * changed getCriteriaForProdShare for urgent to ignore fairshare
  * added nJobs in getJob
  * removed datri stuff from EP
  * added hasValueInCatchall
  * keep records in SiteData for 48h
  * changed to reassign high prio jobs in activated/starting when sites are inactive
  * changed lastStart to be updated only by managed/user/panda
  * using rucio in getScriptOfflineRunning
  * removed registerDispatchDatasetLocation
  * changed to retry ES merge when lost heartbeat
  * added convertRSE for PRODDISK retirement
  * added updateEventRanges
  * using rucio API instead of DaTRI
  * updating lastStart
  * id in fairshare
  * added taskID to getJob
  * introduced prio limit in shares with throttled
  * changed code=51 to force-kill
  * fixed ppEvent for catchall=None
  * added more debug info to insertDataset
  * added soft flag to reassignTask
  * removed old hint for 10.2.0.4
  * added job cloning stuff
  * added max/avgRSS etc
  * resetting startTime to endTime when starting jobs are killed
  * removed pinning for panda.um
  * changed Setupper not to make redundant rule for panda.um
  * reduced timeout for high prio holding jobs
  * added -info to eventLookupClientEI